service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helados-service
spec:
  selector:
    app: helados 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 9000
