ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: api.hmancera.com
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: helados-service
            port:
              number: 80
